feature: Add new flow plans
